# wbork

./: README.md
Wokr/source/: CMakeLists.txt  engine.hxx  game.cxx  myimgui.h  structs.hxx
Wokr/source/glad/: glad.c
Wokr/source/imgui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
